apps/me-portfolio/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: me-portfolio
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`me.ramoneees.com`)
      kind: Rule
      services:
        - name: me-portfolio
          port: 80
  tls:
    secretName: wildcard-ramoneees-com-tls
